# tfw

./: CMakeLists.txt  README.md
include/tfw/: ATransferFunctionEditor.hpp  ColorChooserButton.hpp  CreateEditorVisitor.hpp  Exceptions.hpp  GraphicsItems.hpp  PaletteWidget.hpp  ShowTFOptionsVisitor.hpp  TF1DOptionsDialog.hpp  TF2DOptionsDialog.hpp  TransferFunctionEditor1D.hpp  TransferFunctionEditor2D.hpp  TransferFunctionView.hpp
include/tfw/data/: AStatistics.hpp  ATransferFunction.hpp  TransferFunctionLoading.hpp  TransferFunctionPalette.hpp
src/: GraphicsItems.cpp  PaletteWidget.cpp  TF1DOptionsDialog.cpp  TF2DOptionsDialog.cpp  TransferFunctionEditor1D.cpp  TransferFunctionEditor2D.cpp
src/data/: TransferFunctionLoading.cpp  TransferFunctionPalette.cpp
ui/: PaletteWidget.ui  TF1DOptionsDialog.ui  TF2DOptionsDialog.ui  TransferFunctionEditor1D.ui  TransferFunctionEditor2D.ui
